# geo_lab

./: CMakeLists.txt  README.md  作业要求.txt  程序使用说明.docx
src/: CMakeLists.txt  main.cpp  skeletal_mesh.h  skybox.cpp  skybox.h  texture_image.cpp  texture_image.h
